<resources>
    <string name="app_name">CougarBiteApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="customer_button">Customer</string>
    <string name="employee_button">Employee</string>
    <string name="about_button">About</string>

    <string name="default_hnumber">00559989</string>
    <string name="hnumber_hint"><font size="30">HNUMBER</font></string>
    <string name="default_phone">773\-706\-6119</string>
    <string name="phone_hint"><font size="30">PHONE (NNN-NNN-NNNN)</font></string>
    <string name="default_password">CrazyRussian</string>
    <string name="password_hint"><font size="30">PASSWORD</font></string>
    <string name="customer_sign_in_btn">Customer Sign In</string>

    <string name="default_name">Karl Camp</string>
    <string name="name_hint"><font size="30">NAME (FIRST LAST)</font></string>
    <string name="employee_sign_in_btn">Employee Sign In</string>

    <string name="about_page_title">About CougarBite</string>
    <string name="about_page_description">Description</string>
    <string name="about_page_version">Version 0.0.0</string>

    <string name="nav_view_title">Big Cat\'s Smash-N-Shake</string>
    <string name="navigation_menu">Menu</string>
    <string name="navigation_check_out">Check Out</string>
    <string name="navigation_pay">Pay</string>
    <string name="navigation_order_status">Order Status</string>
    <string name="navigation_about">About</string>
    <string name="navigation_sign_out">Sign Out</string>

    <string name="card_number_hint">CARD NUMBER</string>
    <string name="card_number">0000111122223333</string>
    <string name="name_on_credit_card_hint">NAME ON CREDIT CARD</string>
    <string name="name_on_credit_card">Karl Camp</string>
    <string name="cvv_hint">CVV</string>
    <string name="cvv">123</string>
    <string name="remember_me">Remember Me</string>
    <string name="process_card">Process Card</string>

    <string name="build_your_own">Build Your Own</string>
    <string name="check_out">Check Out</string>
    <string name="description">Description</string>
    <string name="default_value">Default</string>

</resources>
