<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cougarbitebackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.capstone.kcamp.cougarbiteapplication.CustomerApplicationClasses.CreditCardScreenActivity">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/darkTint"
        android:gravity="center">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerInParent="true">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/cardNumber"
            android:hint="@string/card_number_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:text="@string/card_number"
            android:textSize="34sp"
            android:inputType="text"
            app:met_baseColor="@android:color/white"
            app:met_maxCharacters="16"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/creditCardName"
            android:hint="@string/name_on_credit_card_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:text="@string/name_on_credit_card"
            android:textSize="34sp"
            android:inputType="text"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/CVV"
            android:hint="@string/cvv_hint"
            app:met_maxCharacters="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:text="@string/cvv"
            android:textSize="34sp"
            android:inputType="text"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white" />
        <com.rey.material.widget.CheckBox
            android:id="@+id/ckbRemember"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/remember_me"
            android:textColor="@android:color/white"
            app:cbd_strokeColor="@android:color/white" />
    </LinearLayout>
    <info.hoang8f.widget.FButton
        android:id="@+id/processCard"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_margin="4dp"
        android:text="@string/process_card"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        app:cornerRadius="4dp"
        app:fButtonColor="@color/CUCMaroon" />
</RelativeLayout>