<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cougarbitebackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.capstone.kcamp.cougarbiteapplication.AboutScreenActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="#9f000000">
        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_page_title"
            android:layout_marginTop="50dp"
            android:textSize="30sp"
            android:textColor="@android:color/white">
        </TextView>
        <TextView
            android:id="@+id/abt"
            android:text="@string/about_page_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/vers"
            android:text="@string/about_page_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="center">
        </TextView>
    </LinearLayout>
</RelativeLayout>